// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<H1 /> test case matches snapshot 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-weight: 600;
  font-size: 40px;
}

<span
  class="c0"
>
  Hi, I'm H1
</span>
`;

exports[`<H2 /> test case matches snapshot 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-size: 32px;
}

<span
  class="c0"
>
  Hi, I'm H2
</span>
`;

exports[`<H3 /> test case matches snapshot 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-size: 20px;
  line-height: 125%;
}

<span
  class="c0"
>
  Hi, I'm H3
</span>
`;

exports[`<Label1 /> test case matches snapshot 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-weight: 600;
  font-size: 22px;
}

<span
  class="c0"
>
  Hi, I'm Label1
</span>
`;

exports[`<Label2 /> test case matches snapshot 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-weight: 500;
  font-size: 16px;
}

<span
  class="c0"
>
  Hi, I'm Label2
</span>
`;

exports[`<Legend /> test case matches snapshot 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-size: 14px;
}

<span
  class="c0"
>
  Hi, I'm Legend
</span>
`;

exports[`<Legend2 /> test case matches snapshot 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-size: 12px;
  line-height: 140.62%;
  color: #999999;
}

<span
  class="c0"
>
  Hi, I'm Legend2
</span>
`;

exports[`<Legend3 /> test case matches snapshot 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-size: 12px;
  line-height: 140.62%;
  font-weight: 600;
  text-transform: uppercase;
  color: #999999;
}

<span
  class="c0"
>
  Hi, I'm Legend3
</span>
`;

exports[`<Spotlight /> test case matches snapshot 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-weight: 600;
  font-size: 18px;
}

<span
  class="c0"
>
  Hi, I'm Spotlight
</span>
`;

exports[`<Subtitle /> test case matches snapshot 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-size: 28px;
  color: black;
}

<span
  class="c0"
>
  Hi, I'm Subtitle
</span>
`;

exports[`<Subtitle /> test case matches snapshot when color is passed via props 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-size: 28px;
  color: #BB3B46;
}

<span
  class="c0"
  color="#BB3B46"
>
  Hi, I'm Subtitle
</span>
`;

exports[`<Title /> test case matches snapshot 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-weight: bold;
  font-size: 44px;
}

<span
  class="c0"
>
  Hi, I'm Title
</span>
`;

exports[`<Title2 /> test case matches snapshot 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-weight: bold;
  font-size: 36px;
  color: black;
}

<span
  class="c0"
>
  Hi, I'm Title2
</span>
`;

exports[`<Title2 /> test case matches snapshot when color is passed via props 1`] = `
.c0 {
  font-family: IBM Plex Sans,sans-serif;
  font-style: normal;
  font-weight: normal;
  line-height: 140.62%;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: black;
  font-weight: bold;
  font-size: 36px;
  color: #831D23;
}

<span
  class="c0"
  color="#831D23"
>
  Hi, I'm Title2
</span>
`;
